added more adjustments and fixes for the frontend and the api
